# vargate.ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  LICENSE  README-build-sessions.md  README.md  Vargate_Technical_Sprint_Plan.docx  bandit_report.json  docker-compose.prod.yml  docker-compose.yml  replay.py  test_7c_compliance.py  test_behavioral.py  test_benchmark.py  test_blockchain.py  test_chaos.py  test_control_plane.py  test_credential_enclave.py  test_crypto_shredding.py  test_demo.py  test_e2e.py  test_event_consumer.py  test_hotswap.py  test_integration_managed_agents.py  test_mcp_server.py  test_replay.py  test_sepolia_blockchain.py
blockchain/: .dockerignore  Dockerfile  entrypoint.sh  hardhat.config.js  package.json
bundle-server/: Dockerfile  main.py
cli/: README.md  pyproject.toml
cli/vargate_cli/: main.py
config/: opa-config.yaml
docs/: enterprise-roadmap.md  integration-guide-instagram.md  integration-guide-substack.md  integration-guide-twitter.md  meta-app-setup.md  quickstart.md  whitepaper-nemoclaw-section.md
docs-site/: Dockerfile  mkdocs.yml
gateway/: .dockerignore  Dockerfile  approval.py  approval.py.isorted  auth.py  auth.py.isorted  backup.py  backup.py.isorted  blockchain_client.py  compliance_export.py  control_plane.py  event_consumer.py  execution_engine.py  failure_modes.py  failure_modes.py.isorted  gtm_constraints.py  main.py  mcp_server.py  media.py  merkle.py  metrics.py  migrations.py  migrations.py.isorted  oauth_twitter.py  rate_limit.py  routes_audit.py  (+9 more)
(+100 files in other folders)
